--- a/client/studymonk/src/screen/register/register.scss
+++ b/client/studymonk/src/screen/register/register.scss
@@ -62,6 +62,20 @@ a {
         height: 35px;
         width: 70px;
       }
+      form {
+        display: flex;
+        flex-flow: column wrap-reverse;
+        align-items: center;
+      }
+      .filds {
+        padding: 10px;
+        margin: 7px 21px;
+        height: 20px;
+        width: 250px;
+        border-radius: 5px;
+        background-color: rgba(231, 231, 231, 0.562);
+        border: 1px solid rgb(255, 255, 255);
+      }
       input {
         padding: 10px;
         margin: 7px 21px;
@@ -74,7 +88,8 @@ a {
 
       .submit {
         margin-top: 10px;
-        // height: 20px;
+        max-width: 110px;
+        height: 35px;
         border-radius: 100px;
         background-color: #f15d2a;
         border-width: 0px;
